--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title> Periodika </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-spinner *ngIf="loading"></ion-spinner>
+
+    <div *ngIf="!loading">
+      <main><h1>{{ data?.date | date }}</h1></main>
+      <ion-list>
+        <ion-item *ngFor="let issue of data?.issues">
+          <ion-label (click)="openIssue(issue)"
+            >{{ issue?.periodical?.title }}</ion-label
+          >
+        </ion-item>
+      </ion-list>
+    </div>
   </div>
 </ion-content>
