--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <div class="loader" *ngIf="api.loading">
+    <ion-spinner></ion-spinner>
+  </div>
+
+  <div *ngIf="!api.loading">
+    <ion-router-outlet></ion-router-outlet>
+
+    <!-- <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+      <ion-fab-button>
+        <ion-icon name="shuffle"></ion-icon>
+      </ion-fab-button>
+    </ion-fab> -->
+  </div>
 </ion-app>
