--- a/src/app/article/article.page.html
+++ b/src/app/article/article.page.html
@@ -16,7 +16,10 @@
 
     <section class="images">
       <div *ngFor="let image of article?.items">
-        <ion-img [src]="'https://periodika.laacz.lv' + image.image"></ion-img>
+        <ion-img
+          [src]="'https://periodika.laacz.lv' + image.image"
+          class="image"
+        ></ion-img>
       </div>
     </section></main
 ></ion-content>
