--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,33 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+#container {
+  padding: 10px 15px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto Slab", serif;
+}
+
+ion-label,
+ion-item {
+  cursor: pointer;
+}
+
+::ng-deep {
+  ion-img {
+    img {
+      width: auto;
+    }
+  }
+}
+
+img {
+  width: auto;
+}
